# millsonic-player

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
resources/: com.millsonic.player.plist
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  audio.rs  config.rs  db.rs  main.rs  sync.rs  telemetry.rs  updater.rs  ws.rs
