[package]
name = "millsonic-player"
version = "0.5.6"
edition = "2021"
default-run = "millsonic-player"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rodio = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.32"
libc = "0.2"
dirs = "5"
chrono = "0.4"
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
log = "0.4"
simplelog = "0.12"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
